Mon Mar 10 05:43:37 2003  Tim Janik  <timj@gtk.org>

	* rename and CVS-move of bsw-shell/bswshell to shell/bsesh.

	* shell/bsescminterp.h: moved here from bsw-shell/bswscminterp.h.
	* shell/bsescminterp.c: moved here from bsw-shell/bswscminterp.c.
	* shell/bsesh.c: moved here from bsw-shell/bswshell.c.

	* shell/test.scm:
	* shell/Makefile.am:
        * shell/record-midi.scm:
	* shell/bse-scm-glue.boot:
	* shell/progressor-example.scm: moved here from bsw-shell/.

	* bse/bsescripthelper.c:
	* configure.in:
	* Makefile.am:
	* shell/*: adaptions to renames.

Sun Mar  9 15:44:48 2003  Tim Janik  <timj@gtk.org>

	* TODO: got rid of a good chunk of fixmes.
	prioritized stw/timj items.

	* beast-gtk/bstcanvassource.c (bst_canvas_icon_set): catch empty
	icons.

	* configure.in: removed CSL related checks.

	* beast-gtk/bstrecords.sfidl: remove ALSA preference option.

	* beast-gtk/bstdefs.h: cleaned up developer extensions and
	related macros.

	* beast-gtk/bstmain.c: fix up '-:' developer option.

	* acbeast.m4: change gcc optimization from -O3 to -O2 since -O3
	may produce buggy code at times.

Sun Mar  9 07:03:49 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstrecords.sfidl: added group supported by sfidl now

Fri Mar  7 21:45:13 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bstutils.c: adapted sfidl_xxx macros to pspec group support.

Fri Mar  7 14:53:17 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/Makefile.am: scan debugging keys and dump
	them to bstdebugkeys.defs.

	* bstmain.c: debugging options revamp.

Fri Mar  7 03:46:44 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackrollctrl.c: fixup status messages.

Thu Mar  6 06:09:18 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackview.c: removed SEQID column, since the SeqId
	is pretty useless for tracks. added Synth column to allow the user
	to choose the SNet for a track. skip per-track property editing
	elements. implemented upath matching algorithm for synth lookups.