@@ -204,5 +204,5 @@ $(beast_sources): $(beast_built_sources)
 #
 # private (birnet) dependancy to make TAGS file after each build
 #
-all: @MISSING_ETAGS@ @BIRNET_Y@ # TAGS
+all: # TAGS
 
